fix event article header width on mobile

--- a/src/pages/events/[id]/onboarding.module.scss
+++ b/src/pages/events/[id]/onboarding.module.scss
@@ -28,4 +28,5 @@
   width: 800px;
   margin: 0 auto;
   margin-top: 2.2em;
+  max-width: 100%;
 }
